--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     }
                     //AR
                     else if(c == 2){
-		                window.open("https://www.youtube.com/redirect?redir_token=J1UJ-S1QlC0JU9nWrlLoFldUeLd8MTU3NTUzNjA4NUAxNTc1NDQ5Njg1&v=RhbX7PVDAJk&q=https%3A%2F%2Fgithub.com%2Fkimmy3697%2FGISDATA_Dummy%2Fraw%2Fmaster%2FAR_susung.apk&event=video_description");
+		                window.open("https://github.com/kimmy3697/GISDATA_Dummy/blob/master/AR_susung.apk");
                     }
                 }
             }
