--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 else if(b == 3){
                     //VR
                     if(c == 1){
-		                window.open("링크주소");
+		                window.open("https://drive.google.com/file/d/1sMUlGGlUkdSbMbdTeAJFOJ9tIRA0AaH1/view?usp=sharing");
                     }
                     //AR
                     else if(c == 2){
